# sunnyside

./: Cargo.toml  math.rs
slides/: slides.tex
src/: main.rs
tests/: delight.rs  lambda.rs  prop.rs
