[package]
name = "sunnyside"
version = "0.1.0"
authors = ["Siddharth Bhat <siddu.druid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = "0.6.0"
ordered-float = "2.0.1"
env_logger = {version = "0.7", default-features = false}


